# bulkscale

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-cd.yml
src/: main.rs  utils.rs
