[package]
name = "bulkscale"
version = "0.1.0"
authors = ["zekroTJA <riho@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
image = "0.23.11"
log = "0.4"
env_logger = "0.8.1"
threadpool = "1.8.1"